<resources>
    <string name="app_name">Tunerun</string>
    <string name="content_authority">com.vitorarrais.tunerun</string>
    <string name="action_settings">settings</string>
    <string name="help_menu_item">Help</string>
    <string name="history_menu_item">History</string>
    <string name="sign_out_menu_item">Sign out</string>
    <string name="distance_placeholder_text">0.0 km</string>
    <string name="button_start_text">Start</string>
    <string name="prev">Prev</string>
    <string name="pause">Pause</string>
    <string name="next_text">Next</string>
    <string name="start_button_description">Start button</string>
    <string name="prev_button_description">Previous button</string>
    <string name="pause_button_description">pause button</string>
    <string name="next_button_description">next button</string>
    <string name="no_history">No history</string>
    <string name="help_text">Tunerun compass your running\'s intensity with music your\'re listening to. The faster you run the more intense the music you\'re listening to. </string>
    <string name="spotify_login_loader_title">Signing in Spotify</string>
    <string name="spotify_login_loader_message">Waiting for listening to music</string>
    <string name="finish_string">Finish</string>
    <string name="start_string">Start</string>
    <string name="play_button">Play</string>

</resources>
