<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_history"
                android:title="@string/history_menu_item" />
            <item
                android:id="@+id/action_help"
                android:title="@string/help_menu_item" />
            <item
                android:id="@+id/action_sign_out"
                android:title="@string/sign_out_menu_item" />
        </menu>
    </item>
</menu>